Fix header and nav spacing

--- a/src/styles/2-modules/_nav.scss
+++ b/src/styles/2-modules/_nav.scss
@@ -5,7 +5,7 @@
   flex: 1;
   padding: $spacing-s;
   padding-bottom: var(--nav-padding-bottom);
-  margin: $spacing-l $spacing-s;
+  margin: 0 $spacing-s $spacing-l;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
